FWCO2-334: add catch error in metrics adapter. (#75)
* add catch error in metrics adapter.

* code review