@@ -5,7 +5,6 @@ import com.newrelic.api.agent.NewRelic;
 import java.time.DateTimeException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -148,7 +147,7 @@ public class ControllerExceptionHandler {
   public ResponseEntity<ApiError> handleProcessNotSupported(final HttpServletRequest req) {
     final List<String> allowedValues = Arrays.stream(ProcessName.values())
         .map(Enum::name)
-        .collect(Collectors.toList());
+        .toList();
 
     final ApiError apiError = new ApiError(
         "bad_request",
@@ -171,6 +170,23 @@ public class ControllerExceptionHandler {
         "bad_request",
         ex.getMessage(),
         HttpStatus.BAD_REQUEST.value()
+    );
+
+    return ResponseEntity.status(apiError.getStatus()).body(apiError);
+  }
+
+  /**
+   * Handler for Real Metrics exceptions.
+   *
+   * @param ex the exception thrown during a request to external API.
+   * @return {@link ResponseEntity} with 404 status code and description indicating a no content.
+   */
+  @ExceptionHandler(RealMetricsNotFoundException.class)
+  public ResponseEntity<ApiError> handleRealMetricsNotFoundException(final RealMetricsNotFoundException ex) {
+    final ApiError apiError = new ApiError(
+        "real_metrics_not_found",
+        ex.getMessage(),
+        HttpStatus.NOT_FOUND.value()
     );
 
     return ResponseEntity.status(apiError.getStatus()).body(apiError);
